# standalone

./: .gitmodules  CMakeLists.txt  CPack.cmake.in  README.md  flake.nix
.github/workflows/: build.yml  cachix.yml  zizmor.yml
nix/: package.nix
src/client/: CMakeLists.txt  Client.cpp  ClientDBusInterface.cpp  ClientMessageHandler.cpp  ClientMessageHandler.h
src/client/wayland/: WlrForeignToplevelManagementV1.cpp
src/daemon/: CMakeLists.txt  Server.cpp  SessionManager.cpp  SessionManager.h  main.cpp
src/daemon/input/: EvdevVirtualMouse.cpp  EvdevVirtualMouse.h  StandaloneInputBackend.cpp  StandaloneInputBackend.h  StandaloneInputDevice.cpp  StandaloneInputDevice.h
src/daemon/interfaces/: IPCEnvironmentInterfaces.cpp  IPCEnvironmentInterfaces.h  IPCNotificationManager.cpp  IPCPlasmaGlobalShortcutInvoker.cpp  IPCProcessRunner.cpp
src/ipc/: CMakeLists.txt
